# quilt

./: .cvsignore  .gitignore  AUTHORS  BUGS  Makefile  Makefile.in  NEWS  README.in  TODO  aclocal.m4  bash_completion  changes2changelog  config.h.in  configure  configure.ac  git-desc  importpatch.in  inpatch.in  newpatch.in  patch-scripts.changes  patch-scripts.spec  patchadd.in  poppatch.in  pushpatch.in  quilt.changes  quilt.quiltrc  quilt.spec  quilt.spec.in  refpatch.in  toppatch.in
compat/: .cvsignore  date.in  diffstat.in  getopt.in  rpmbuild.in
contrib/: import.diff
debian/: .cvsignore  NEWS  changelog  changelog~  control  control.in  copyright  debquilt.mk  docs  manpage.sgml.ex  patchsys-quilt.mk  prerm  quilt.1  quilt.debbuild.mk  quilt.docs  quilt.install  quilt.make  rules  watch
doc/: .cvsignore  Makefile  README.MAIL  README.in  RELEASING  consider-for-docs-1.mail  consider-for-docs-2.mail  consider-for-docs-3.mail  main-rus.tex  main.tex  quilt.1.in  sample.quiltrc
lib/: .cvsignore  apatch.in  backup-files.c  ftw.c  ftw.h  parse-patch  patchfns.in  quilt.el  rpatch.in  spec2series  spec2series.in  touched-by-patch
needs-checking/: combine-applied  combine-series  cvs-take-patch  export_patch  extract_description  join-patch  linus-patch  new-kernel  p_diff  patchdesc  prep-patch  pstatus  ptkdiff  removed-by-patch  rename-patch  rolled-up-patch  stripspace  tag-series
oldies/: prep-patch
po/: .cvsignore  Makefile  de.po  fr.po  ja.po  quilt.pot  ru.po
quilt/: .cvsignore  add.in  annotate.in  applied.in  delete.in  diff.in  edit.in  files.in  fold.in  fork.in  graph.in  grep.in  guidiff.in  header.in  import.in  mail.in  new.in  next.in  patches.in  pop.in  previous.in  push.in  refresh.in  remove.in  rename.in  rest.in  revert.in  series.in  setup.in  snapshot.in  top.in  unapplied.in  upgrade.in
quilt/scripts/: .cvsignore  backup-files.in  dependency-graph.in  edmail.in  inspect-wrapper.in  inspect.in  parse-patch.in  patchfns.in  remove-trailing-ws.in  utilfns
scripts/: .cvsignore  apatch.in  dependency-graph.in  edmail.in  inspect.in  parse-patch.in  patchfns.in  remove-trailing-ws.in  rpatch.in  spec2series.in
test/: .cvsignore  Makefile  add-filename-check.test  altered-series.test  annotate.test  applied.test  auto-refresh.test  backup-files.test  basedir.no-test  colon-in-patch-name.test  comments.test  conflicts.test  create-delete.diff  create-delete.test  delete.test  dir-a-b.test  dotglob.test  edit.test  empty-files.test  empty.test  example1.test  failbackup.test  faildiff.test  failpop.test  fold.test  formats.test  half-applies.test  hard-linked-patch.test  header.test  help.test  import.test  import2.test  mail.test  merge.test  missing-newline.test  missing.test  new-nosubdir.test  new.test  no-file-to-patch.test  no-series.test  (+31 more)
